<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <AutoCompleteTextView
        android:id="@+id/autoCompTextViewNewItem"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonEditSpinner"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toStartOf="@+id/buttonAddItem"
        android:layout_toLeftOf="@+id/buttonAddItem"
        android:layout_toEndOf="@+id/editTextQuantity"
        android:layout_toRightOf="@+id/editTextQuantity"
        android:completionThreshold="3"
        android:ems="10"
        android:hint="@string/product_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonEditSpinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="7dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/product_quantity"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonEditSpinner"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onAddItem"
        android:text="@string/button_add" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButtonEditSave"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/button_delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAddItem"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:onClick="onDeleteAllRows"
        android:text="Delete All"
        android:visibility="gone" />

    <ToggleButton
        android:id="@+id/toggleButtonEditSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoCompTextViewNewItem"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textOff="@string/toggle_edit_list"
        android:textOn="@string/toggle_save_list" />

    <ToggleButton
        android:id="@+id/toggleButtonDeleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoCompTextViewNewItem"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/toggle_delete_item"
        android:textOn="@string/toggle_done_deleting_item" />

    <Spinner
        android:id="@+id/spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toEndOf="@+id/buttonEditSpinner"
        android:layout_toRightOf="@+id/buttonEditSpinner" />

    <Button
        android:id="@+id/buttonEditSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="onEditSpinner"
        android:text="@string/button_spinner_edit" />

    <TextView
        android:id="@+id/textViewMarketName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonEditSpinner"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toStartOf="@+id/editTextMarketName"
        android:layout_toLeftOf="@+id/editTextMarketName"
        android:textSize="25sp"
        android:text="Name:"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editTextMarketName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonEditSpinner"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/supermarket_example"
        android:inputType="textPersonName"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewMarketLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextMarketName"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toStartOf="@+id/editTextMarketLocation"
        android:layout_toLeftOf="@+id/editTextMarketLocation"
        android:text="Location:"
        android:textSize="25sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editTextMarketLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextMarketName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/location_example"
        android:inputType="textPersonName"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonAddMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextMarketLocation"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:onClick="onAddMarket"
        android:text="@string/button_add"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonReorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoCompTextViewNewItem"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_toStartOf="@+id/buttonAddItem"
        android:layout_toLeftOf="@+id/buttonAddItem"
        android:onClick="onReorder"
        android:text="@string/button_reorder" />

</RelativeLayout>