<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

<!--    <TextView-->
<!--        android:id="@+id/textview_aisle_item"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="TextView"-->
<!--        android:textSize="30sp"/>-->

<!--    <TextView-->
<!--        android:id="@+id/textview_name_item"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="TextView"-->
<!--        android:textSize="30sp"/>-->

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.3" />

    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/product_name"
        android:importantForAutofill="no"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextAisleNumber"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:background="@null"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/aisle_default"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword"
        android:textSize="24sp" />
    <!--        android:paddingHorizontal="8dp"-->

</LinearLayout>