<resources>
    <string name="app_name">GroceryList3</string>
    <string name="aisle_default">\?</string>
    <string name="product_name">Product name</string>
    <string name="product_quantity">1x</string>
    <string name="button_add">Add</string>
    <string name="button_clear_ticked_then_unticked">Clear List</string>
    <string name="toggle_edit_list">Edit Aisles</string>
    <string name="toggle_save_list">Save Aisles</string>
    <string name="toggle_delete_item">Delete Item(s)</string>
    <string name="toggle_done_deleting_item">Done Deleting</string>
<!--    <string name="snack_message_press_delete_items">Press DELETE ITEM(S) to allow swipe delete</string>-->
...
